# CIRNO_WebSearchAgent

./: .gitignore  LICENSE  README.md  docker-compose.yml
cirno_web_search_agent/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
cirno_web_search_agent/cirno_web_search_agent/: agent.py  agent_executor.py  config.py  data_models.py  logger_config.py  main.py  prompt.py  tools.py  web_search_engine.py
mcp/: Dockerfile  entrypoint.sh
