[project]
name = "cirno-web-search-agent"
version = "0.1.0"
description = "The web searching agent for CIRNO multiagent system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.12",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
