[project]
name = "cirno-web-search-agent"
version = "0.1.0"
description = "The web searching agent for CIRNO multiagent system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "exa-py>=2.9.0",
    "langchain>=1.2.12",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
