[project]
name = "cirno-web-search-agent"
version = "0.1.0"
description = "The web searching agent for CIRNO multiagent system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a>=0.44",
    "a2a-sdk>=0.3.25",
    "asyncio>=4.0.0",
    "exa-py>=2.9.0",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cirno_web_search_agent_app = "cirno_web_search_agent.main:run"
